# GraphRiverCast

./: .gitignore  LICENSE  README.md  environment.yml  group_lookup.html  pyproject.toml  requirements.txt  run_commands.txt
checkpoints/Fine-tune/Amazon/: Amazon_Scratch.ckpt  Amazon_finetuning.ckpt  Amazon_finetuning_noTopo.ckpt
checkpoints/Fine-tune/Upper Danube Basin (LamaH-CE)/: GRC_Foundation_6min.ckpt
checkpoints/Pre-train/Ablation/: Group_10_Bare_ColdStart.ckpt  Group_10_Bare_HotStart.ckpt  Group_10_Sp_ColdStart.ckpt  Group_10_Sp_HotStart.ckpt  Group_10_Sp_Sta_ColdStart.ckpt  Group_10_Sp_Sta_HotStart.ckpt  Group_10_Sta_ColdStart.ckpt  Group_10_Sta_HotStart.ckpt  Group_10_Tp_ColdStart.ckpt  Group_10_Tp_HotStart.ckpt  Group_10_Tp_Sp_ColdStart.ckpt  Group_10_Tp_Sp_HotStart.ckpt  Group_10_Tp_Sta_ColdStart.ckpt  Group_10_Tp_Sta_HotStart.ckpt  Group_11_Bare_ColdStart.ckpt  Group_11_Bare_HotStart.ckpt  Group_11_Sp_ColdStart.ckpt  Group_11_Sp_HotStart.ckpt  Group_11_Sp_Sta_ColdStart.ckpt  Group_11_Sp_Sta_HotStart.ckpt  Group_11_Sta_ColdStart.ckpt  Group_11_Sta_HotStart.ckpt  Group_11_Tp_ColdStart.ckpt  Group_11_Tp_HotStart.ckpt  Group_11_Tp_Sp_ColdStart.ckpt  Group_11_Tp_Sp_HotStart.ckpt  Group_11_Tp_Sta_ColdStart.ckpt  Group_11_Tp_Sta_HotStart.ckpt  Group_12_Bare_ColdStart.ckpt  Group_12_Bare_HotStart.ckpt  Group_12_Sp_ColdStart.ckpt  Group_12_Sp_HotStart.ckpt  Group_12_Sp_Sta_ColdStart.ckpt  Group_12_Sp_Sta_HotStart.ckpt  Group_12_Sta_ColdStart.ckpt  (+189 more)
scripts/: setup_macos.sh  setup_unix.sh  setup_windows.bat
src/: __init__.py  finetune.py  inference.py  model.py
(+50 files in other folders)
