[project]
name = "graphrivercast"
version = "1.0.0"
description = "GraphRiverCast: A Topology-Informed AI Foundation Model for Global River Forecasting"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Hancheng Ren"},
    {name = "Gang Zhao"},
    {name = "Shuo Wang"},
    {name = "Louise Slater"},
    {name = "Dai Yamazaki"},
    {name = "Jingfang Fan"},
    {name = "Bo Pang"}
]
keywords = ["hydrology", "graph-neural-network", "deep-learning", "river-modelling", "foundation-model"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Hydrology",
]

dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.0.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
]

[project.urls]
Repository = "https://github.com/GraphRiverCast"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
